vlib/v/checker/tests/import_mod_sub_as_sub_err.vv
import encoding.utf8 as utf8

fn main() {
    println(utf8.validate_str('añçá'))
}
